--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+<body>
 <h4>Datenschutzerklärung</h4>
 
 <p>Wir freuen uns sehr über Ihr Interesse an unserem Unternehmen. Datenschutz hat einen besonders hohen Stellenwert für die Geschäftsleitung der Tourguide. Eine Nutzung der Internetseiten der Tourguide ist grundsätzlich ohne jede Angabe personenbezogener Daten möglich. Sofern eine betroffene Person besondere Services unseres Unternehmens über unsere Internetseite in Anspruch nehmen möchte, könnte jedoch eine Verarbeitung personenbezogener Daten erforderlich werden. Ist die Verarbeitung personenbezogener Daten erforderlich und besteht für eine solche Verarbeitung keine gesetzliche Grundlage, holen wir generell eine Einwilligung der betroffenen Person ein.</p>
@@ -245,5 +246,5 @@ Vor einer Bereitstellung personenbezogener Daten durch den Betroffenen muss sich
 
 <p>Diese Datenschutzerklärung wurde durch den Datenschutzerklärungs-Generator der DGD Deutsche Gesellschaft für Datenschutz GmbH, die als <a href="https://dg-datenschutz.de/datenschutz-dienstleistungen/externer-datenschutzbeauftragter/">Datenschutzbeauftragter</a> tätig ist, in Kooperation mit den <a href="https://www.wbs-law.de/it-recht/datenschutzrecht/">Datenschutz Anwälten der Kanzlei WILDE BEUGER SOLMECKE | Rechtsanwälte</a></b> erstellt.
 </p>
-
+</body>
 </html>
