--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 <p>Am Osterberg 11a</p>
 <p>21709 Düdenbüttel</p>
 <p>Deutschland</p>
-<p>Tel.: +4941444423</p>
+<p>Tel.: 016095667822</p>
 <p>E-Mail: Benjamin.vollmers@gmail.com</p>
-<p>Website: localhost:4200</p>
+<p>Website: https://localhost:4200/</p>
 
 <h4>3. Erfassung von allgemeinen Daten und Informationen</h4>
 <p>Die Internetseite der Tourguide erfasst mit jedem Aufruf der Internetseite durch eine betroffene Person oder ein automatisiertes System eine Reihe von allgemeinen Daten und Informationen. Diese allgemeinen Daten und Informationen werden in den Logfiles des Servers gespeichert. Erfasst werden können die (1) verwendeten Browsertypen und Versionen, (2) das vom zugreifenden System verwendete Betriebssystem, (3) die Internetseite, von welcher ein zugreifendes System auf unsere Internetseite gelangt (sogenannte Referrer), (4) die Unterwebseiten, welche über ein zugreifendes System auf unserer Internetseite angesteuert werden, (5) das Datum und die Uhrzeit eines Zugriffs auf die Internetseite, (6) eine Internet-Protokoll-Adresse (IP-Adresse), (7) der Internet-Service-Provider des zugreifenden Systems und (8) sonstige ähnliche Daten und Informationen, die der Gefahrenabwehr im Falle von Angriffen auf unsere informationstechnologischen Systeme dienen.</p>
